[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Game/Extras/Pause.gd" type="Script" id=1]
[ext_resource path="res://Assets/Pause Menu/Outrun future.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Main Menu/Buttons/Resume Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Main Menu/Buttons/Title screen Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Main Menu/Buttons/Options Button_p.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 2 )

[node name="Pause" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Fons" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.857361
margin_right = -0.857422
color = Color( 0, 0, 0, 0.219608 )

[node name="Menu" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -175.0
margin_right = 175.0
margin_bottom = 175.0
color = Color( 0.14902, 0.192157, 0.219608, 1 )

[node name="Label" type="Label" parent="Menu"]
margin_left = 17.0
margin_top = 27.0
margin_right = 340.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.439216, 0.0666667, 0.0666667, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "PAUSE MENU"

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_top = 124.0
margin_right = 350.0
margin_bottom = 350.0

[node name="Resume" parent="Menu/VBoxContainer" instance=ExtResource( 3 )]
margin_bottom = 70.0
rect_min_size = Vector2( 350, 70 )

[node name="Title Screen" parent="Menu/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 74.0
margin_bottom = 144.0
rect_min_size = Vector2( 350, 70 )

[node name="Options" parent="Menu/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 148.0
margin_bottom = 218.0
rect_min_size = Vector2( 350, 70 )

[connection signal="pressed" from="Menu/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Title Screen" to="." method="_on_Title_Screen_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Options" to="." method="_on_Options_pressed"]
